examples/neg/issue373/object_no_annotation.effekt
interface Eff[A] {
  def op(x: A): A
}

def eff = new Eff[Int] {
  def op(x) = x / 1
}

def main() = println(eff.op("hello"))
